force-app/main/default/objects/gupshupcrm__Template__c/gupshupcrm__Template__c.object-meta.xml
<CustomObject>
    <label>Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>