force-app/main/default/objects/gupshupcrm__Template__c/fields/gupshupcrm__Channel__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>gupshupcrm__WhatsApp_Channel__c.gupshupcrm__What_s_App_Channel_Type__c</field>
            <operation>equals</operation>
            <value>SMS</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>gupshupcrm__WhatsApp_Channel__c</referenceTo>
    <relationshipLabel>Templates</relationshipLabel>
    <relationshipName>Templates</relationshipName>
    <type>Lookup</type>
</CustomField>