force-app/main/default/objects/gupshupcrm__Template__c/fields/gupshupcrm__Template_Category__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Template_Category__c</fullName>
    <label>Template Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEXT</fullName>
                <default>true</default>
                <label>TEXT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>