force-app/main/default/objects/gupshupcrm__Template__c/fields/gupshupcrm__Template_Message__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Template_Message__c</fullName>
    <label>Template Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>