force-app/main/default/objects/gupshupcrm__Template__c/validationRules/gupshupcrm__Template_Required_field_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>gupshupcrm__Template_Required_field_rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK( TEXT( gupshupcrm__Template_Category__c ) ), ISBLANK(   gupshupcrm__Template_Message__c ), ISBLANK(  gupshupcrm__Channel__c  ) )</errorConditionFormula>
    <errorMessage>Please fill required fields Template Category, Template Message and Channel.</errorMessage>
</ValidationRule>