force-app/main/default/objects/gupshupcrm__Template__c/listViews/gupshupcrm__All.listView-meta.xml
<ListView>
    <fullName>gupshupcrm__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>